public static class Const
{
    public const string TAG_NAME_ENEMY          = "Enemy";
    public const string TAG_NAME_PLAYER         = "Player";
    public const string TAG_NAME_BULLET         = "Bullet";
    public const string TAG_NAME_ATK_RANGE      = "AttackRange";

    public const string ANIM_NAME_IDLE          = "idle";
    public const string ANIM_NAME_RUN           = "run";
    public const string ANIM_NAME_DANCE         = "dance";
    public const string ANIM_NAME_ATTACK        = "attack";
    public const string ANIM_NAME_DIE           = "die";

    public const float CHARACTER_UPSCALE_UNIT   = 0.1f;
}
